# build_your_own_small_things

./: .clang-format  .gitignore  LICENSE  README.md
01_build_your_own_vector/: CMakeLists.txt  README.md  check.sh  template_check.sh
01_build_your_own_vector/include/: int_vector.hpp  vector.hpp  vector.tpp
01_build_your_own_vector/notes/: 01-memory-ownership.md  02-move-semantics.md  03-cpp-class-1.md  04-cpp-class-2.md  05-rule-of-0-3-5.md  06-noexcept.md  07-nodiscard.md  08-lvalues-rvalues.md  09-template-intro.md  10-template-move-forward.md
01_build_your_own_vector/src/: int_vector.cpp  vector.tpp
01_build_your_own_vector/tests/: test_int_vector.cpp  test_utils.hpp  test_vector.cpp
